Try minimal Run with new stuff